--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,8 @@
 .main {
+        overflow-y: auto;
+        scroll-behavior: smooth;
+      
+      
     margin: 0;
     padding: 0;
     margin-top: 0;
