--- a/src/App.css
+++ b/src/App.css
@@ -28,7 +28,7 @@
     width: 100%;
 
 }
-.nav a{
+.nav button{
     text-decoration: none;
     color: #1A1919;
     font-size: 13px;
@@ -38,6 +38,13 @@
     border-radius: 5px;
     transition: background-color 0.3s ease;
 }
+.nav-link{
+    transition: all 0.3s ease;
+
+}
+.active{
+    color: #ff6f61 !important;
+  }
 .nav a:hover{
     color: #CB181D;
 }
