--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,11 @@
 .main {
         overflow-y: auto;
         scroll-behavior: smooth;
-      
-      
     margin: 0;
     padding: 0;
     margin-top: 0;
     box-sizing: border-box;
-    font-family: 'Poppins', sans-serif;
+    font-family: 'Quicksand', sans-serif;
     width: 100vw;
     font-size: 16px;
     font-weight: 400;
@@ -28,23 +26,36 @@
     width: 100%;
 
 }
-.nav button{
+.navbar-nav button{
     text-decoration: none;
     color: #1A1919;
-    font-size: 13px;
-    font-weight: 500;
+    font-size: 12px;
+    font-weight: 400;
     margin: 0 10px;
     padding: 10px 10px;
     border-radius: 5px;
     transition: background-color 0.3s ease;
 }
-.nav-link{
-    transition: all 0.3s ease;
-
+.nav-link li{
+    transition: all 0.4s ease;
 }
-.active{
+.active-nav button{
     color: #ff6f61 !important;
   }
 .nav a:hover{
     color: #CB181D;
+}
+.login-button{
+    background-color: #ff6f61;
+    text-align: center;
+    color: white;
+    border: none;
+    padding: 6px 20px;
+    border-radius: 50px;
+    cursor: pointer;
+    font-size: 12px;
+    font-weight: bold;
+}
+.login-button:hover{
+    background-color: #A61E24;
 }
