--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -27,12 +27,12 @@
   font-size: 28px;
   margin-top: 20px;
   margin-bottom: 50px;
-  color: rgb(214, 0, 0);
+  color: #ff6f61;
 }
 .about h5{
   font-size: 20px;
   margin-bottom: 20px;
-  color: rgb(214, 0, 0);
+  color: #ff6f61;
 }
 .about p{
   font-size: 13px;
@@ -57,11 +57,11 @@
   height: 10px;
   border-radius: 50%;
   background-color: white;
-  border: 2px solid rgb(214, 0, 0);
+  border: 2px solid #ff6f61;
   margin-right: 10px;
 }
 .about button{
-  background-color: rgb(214, 0, 0);
+  background-color: #ff6f61;
   color: white;
   border: none;
   padding: 10px 20px;
@@ -71,5 +71,28 @@
   margin-top: 20px;
 }
 .about button:hover{
-  background-color: rgb(255, 112, 112);
+  background-color: rgb(255, 151, 151);
 }
+ @media  screen and (max-width:700px){
+  .about{
+    height: 100%;
+    padding: 20px;}
+  .about img{
+    height: 300px;
+  }
+  .about .img-container{
+    width: 100%;
+    max-width: 400px;
+    margin-bottom: 20px;
+    margin-right: 90px;
+  }
+  .about img{
+    width: 100%;
+    height: 300px;
+    border-radius: 10px;
+  }
+  .content{
+    margin-top: 50px;
+    padding: 10px;
+  }
+ }
