--- a/src/styles/blogs.css
+++ b/src/styles/blogs.css
@@ -1,6 +1,6 @@
-.blogs{
+.blogs {
   font-family: 'Quicksand', sans-serif;
-margin-top: 50px;
+  margin-top: 50px;
   padding: 0;
   width: 100vw;
   margin-top: 50px;
@@ -10,11 +10,11 @@ margin-top: 50px;
   align-items: center;
   justify-content: center;
   padding: 50px;
-  
+
 }
 
-.blogs button{
-  background-color: #CB181D;
+.blogs button {
+  background-color: #ff6f61;
   text-align: center;
   color: white;
   border: none;
@@ -24,6 +24,7 @@ margin-top: 50px;
   font-size: 16px;
   font-weight: bold;
 }
-.blogs button:hover{
+
+.blogs button:hover {
   background-color: #A61E24;
 }
