--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -20,7 +20,7 @@
     border-radius: 4px;
 }
 .contact input:focus{
-    border-color: #ff0000;
+    border-color: #ff6f61;
     outline: none;
 }
 .contact label{
@@ -36,14 +36,14 @@
     border-radius: 4px;
 }
 .contact textarea:focus{
-    border-color: #ff0000;
+    border-color: #ff6f61;
     outline: none;
 }
 
 .contact button{
     width: 100px;
     height: 40px;
-    background-color: #ff0000;
+    background-color: #ff6f61;
     color: white;
     border: none;
     border-radius: 4px;
