--- a/src/styles/skillbar.css
+++ b/src/styles/skillbar.css
@@ -9,9 +9,9 @@
   
   .progress-bar {
     width: 100%;
-    height: 25px;
+    height: 17px;
     padding: 2px;
-    border: 3px solid #c8190c;
+    border: 2px solid #ff6f61;
     border-radius: 20px;
     background-color: transparent;
     overflow: hidden;
@@ -19,7 +19,7 @@
   
   .progress-fill {
     height: 100%;
-    background-color: #c8190c;
+    background-color: #ff6f61;
     border-radius: 20px;
     display: flex;
     align-items: center;
