--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .main {
-        overflow-y: auto;
-        scroll-behavior: smooth;
+    overflow-y: auto;
+    scroll-behavior: smooth;
     margin: 0;
     padding: 0;
     margin-top: 0;
@@ -9,6 +9,9 @@
     width: 100vw;
     font-size: 16px;
     font-weight: 400;
+}
+.logo{
+    max-width: 120px;
 }
 
 .header {
@@ -19,7 +22,7 @@
 .nav {
     position: sticky !important;
     background-color: rgb(255, 255, 255) !important;
-    padding: 2px 10px !important;
+    padding: 7px 10px !important;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     top: 0;
     left: 0;
@@ -29,18 +32,22 @@
 .navbar-nav button{
     text-decoration: none;
     color: #1A1919;
-    font-size: 12px;
     font-weight: 400;
     margin: 0 10px;
     padding: 10px 10px;
     border-radius: 5px;
     transition: background-color 0.3s ease;
 }
-.nav-link li{
+.nav-item{
     transition: all 0.4s ease;
+    font-weight: bolder;
+    font-size: 15px;
+    
 }
+
 .active-nav button{
     color: #ff6f61 !important;
+    
   }
 .nav a:hover{
     color: #CB181D;
@@ -59,3 +66,4 @@
 .login-button:hover{
     background-color: #A61E24;
 }
+
